修复OffTimes后台干扰和会话起点问题
- 修正切到OffTimes时的后台干扰检测逻辑
- 防止OffTimes后台任务被错误记录为前台使用
- 修正应用切换时的会话起点计算，避免时长被拉长
- 优化重叠/邻近会话的合并策略
- 增强状态机保护，忽略OffTimes UI在前台时的暂停事件

解决问题:
1. 16:34:44-16:40:42 OffTimes记录不应存在
2. 应用切换时上一个会话时长计算错误
3. Chrome等应用被OffTimes后台任务中断的问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OffTime"
         tools:targetApi="31">
-        
+
+        <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
+
             <!-- Google Play要求的广告ID权限声明 -->
     <meta-data
         android:name="com.google.android.gms.ads.AD_MANAGER_APP"
