修复应用检测和30秒UI更新问题
主要修复：
1. 修复前台服务类型声明，解决崩溃问题
2. 修复UnifiedUpdateService手动更新后停止定时循环的问题
3. 修复30秒UI更新流程，现在每30秒完整更新数据和UI
4. 移除有问题的会话清理逻辑，避免正在使用的应用被错误结算
5. 增强日志跟踪，便于调试更新流程
6. 修复跨天会话分割使用同日合并逻辑，避免重复插入

技术细节：
- DataAggregationService添加foregroundServiceType和startForeground调用
- UnifiedUpdateService手动更新不再stopSelf，保持定时循环
- HomeViewModel添加30秒自动刷新和更好的事件响应日志
- UsageStatsCollectorService移除过于激进的会话清理逻辑
- AppSessionRepository跨天分割使用handleSameDaySession避免重复

测试状态：
- Pixel 9a: 30秒UI更新正常工作
- Pixel 8/9 Pro XL: 应用检测问题已修复
- 前台服务崩溃问题已解决

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,7 +117,15 @@
         <service
             android:name=".service.DataAggregationService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false"
+            android:foregroundServiceType="specialUse">
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="data_aggregation" />
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE_EXPLANATION"
+                android:value="This service aggregates usage data and cleans duplicates in the background." />
+        </service>
         
         <!-- 统一更新服务 -->
         <service
