🚀 v1.4.3: SMS登录功能重构与优化
✨ 新功能:
- 合并SMS登录和注册流程，用户体验更简洁
- 新增 /api/auth/sms-login API，支持自动用户创建
- SMS登录界面添加昵称输入框（可选）
- 隐藏SMS登录模式下的注册按钮

🔧 后端优化:
- 集成阿里云短信服务，支持真实短信发送
- 新增 DirectSmsLoginRequest 数据类
- 优化用户创建逻辑，自动生成密码满足数据库约束
- 完善SMS服务配置和错误处理

🎨 前端改进:
- 更新LoginViewModel使用新的directSmsLogin API
- 优化SMS登录界面UI，移除冗余的注册相关元素
- 添加中英文昵称输入框字符串资源
- 改进用户交互流程

🛠️ 技术改进:
- 更新UserRepository和UserApiService
- 完善ProGuard规则，保留网络相关类
- 优化Gradle构建配置
- 添加调试脚本和部署工具
- 添加环境配置示例文件

📱 版本信息:
- 版本号: 1.4.3
- 构建类型: Alipay Release
- 支持真实短信验证码发送和接收

🔒 安全改进:
- 环境配置文件已从版本控制中排除
- 敏感信息通过.gitignore保护

--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
   "author": "OffTimes",
   "license": "MIT",
   "dependencies": {
+    "@alicloud/dysmsapi20170525": "^4.2.0",
+    "@alicloud/openapi-client": "^0.4.15",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
