--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ Thumbs.db
 # =================================================
 /docs/generated/
 /reports/
+# 环境配置文件（包含敏感信息）
+server/.env.production
