🚀 Release v1.4.6: 修复真实手机后台服务稳定性问题
✨ 主要改进:
- 🔧 修复真实手机后台服务中断问题，加强后台保活机制
- ⚡ 优化数据更新流程，修复死循环和空指针异常
- 🎯 实现严格30秒定时更新，提升统计准确性
- 🔋 新增WakeLock和AlarmManager双重保活策略
- 🚀 提升应用在真实设备上的后台稳定性

🔧 技术修复:
- UnifiedUpdateService: 加强后台保活机制，支持Doze模式
- UsageStatsCollectorService: 修复空指针异常，优化前台应用检测
- HomeViewModel: 修复数据更新死循环问题
- AndroidManifest: 添加WakeLock和电池优化权限
- ProGuard: 保留关键服务的调试日志

📦 构建信息:
- 版本: 1.4.6 (Build 31)
- 支付宝版APK: 3.5MB
- Google Play版APK: 5.2MB
- 调试符号: 见 google-play-symbols-v1.4.6/ 目录

🗂️ 项目清理:
- 移除过时的调试脚本和文档
- 添加 .gitignore 忽略大文件和敏感文件
- 更新 CHANGELOG 到 v1.4.6

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,22 @@ Thumbs.db
 /reports/
 # 环境配置文件（包含敏感信息）
 server/.env.production
+# 忽略大文件和敏感文件
+google-play-symbols-*/mapping.txt
+google-play-symbols-*/*.aab
+*.jks
+*.json
+alipay_keys/
+alipayPublicKey_RSA2.txt
+offtimes-*.json
+build_report.txt
+
+# 忽略调试脚本
+debug_*.sh
+oneplus_debug.sh
+force_debug_logs.sh
+final_test.sh
+test_*.sh
+
+# 忽略服务器更新文件
+server_updates/
